cabal-version:      3.0
name:               servant-pagination-experiment
version:            0.1.0.0
synopsis:           Experiment in Servant client pagination
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable servant-pagination-experiment
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        servant,
        servant-server,
        servant-client,
        http-client,
        aeson

    hs-source-dirs:   app
    default-language: GHC2024
