cabal-version:      3.0
name:               servant-pagination-experiment
version:            0.1.0.0
synopsis:           Experiment in Servant client pagination
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable servant-pagination-experiment
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base < 5,
        aeson >= 2.2.3 && < 2.3,
        mtl >= 2.3.1 && < 2.4,
        text >= 2.1.1 && < 2.2,
        network-uri >= 2.6.4 && < 2.7,
        async >= 2.2.5 && < 2.3,
        http-client >= 0.7.17 && < 0.8,
        servant >= 0.20.2 && < 0.21,
        servant-client >= 0.20.2 && < 0.21,
        servant-server >= 0.20.2 && < 0.21,
        warp >= 3.4.1 && < 3.5,
    hs-source-dirs:   app
    default-language: GHC2024
